@@ -511,3 +511,7 @@ Name[x-test]=xxDHT is not enabledxx
 Name[zh_CN]=未启用 DHT
 Name[zh_TW]=DHT 未開啟
 Action=Sound|Popup
+
+[Event/PluginEvent]
+Name=Event generated by plugin
+Action=Sound|Popup
