@@ -4,7 +4,6 @@ Changes in 4.1:
 - Change from and to fields to always ensure that from is smaller then to in the bandwidth scheduler plugin (225951)
 - Show if a peer is using the µTP protocol or not 
 - Cleanup file dialog filters for torrents and make sure that files named torrent, are also seen by the filter (241259)
-- Improve performance of ViewModel when there are many torrents (216501)
 - Ensure that webinterface plugin works properly with bindv6only flag on (238688)
 - Add option to not restore the previous session of the search plugin (233288)
 - Save suspended state on exit and restore on restart (241675)
@@ -23,10 +22,12 @@ Changes in 4.1:
 - Add option to open all torrents silently
 - Add exclusion patterns to syndication plugin filters (251141)
 - Show current upload and download limit in trayicon submenus instead of limits from the settings (251953)
+- Show notifications when automatic update of IP filter fails (243458)
 
 Changes in 4.0.4:
 - Make sure that syndication filter save location overrides group save location (250116)
 - Don't hardcode background of bandwidth schedule to white so that system colors are used (251925)
+- Improve performance of ViewModel when there are many torrents (216501)
 
 Changes in 4.0.3:
 - Fix bug causing wrong encoding to be used when the default save location of a group is read (244873)
